--- a/main.css
+++ b/main.css
@@ -1,3 +1,16 @@
+nav {
+    position: relative;
+}
+/* .nav_links {
+    padding-left: 1500px;
+}
+.nav_links a {
+    font-size: 70px;
+} */
+
+h1 {
+    font-size: xx-large;
+}
 #red_lines {
     height: 5px;
     border-width: 0;
